Fix ref usage on list, expand scrollable to full width to account for possible scrollbar (win), fix search exact match case

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@ html, body {
   flex-direction: column;
   flex: 1 0 0;
 }
+
+.grid > div {
+  margin: 0px auto;
+  position: relative;
+}
